Add basic signin/signout functionality

--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,9 @@
       .errors {
         color: red;
       }
+      .signout {
+        cursor: pointer;
+      }
     </style>
     <title>React App</title>
   </head>
